--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "hardhat": "^2.12.0"
   },
   "dependencies": {
+    "@chainlink/contracts": "^0.6.1",
     "@nomicfoundation/hardhat-toolbox": "^3.0.0"
   }
 }
